lbremer/hw3/autog/02-27.04-36.out
Simulator.java:96: error: method predictIfTaken in class BranchPredictor cannot be applied to given types;
	    boolean predictedTaken = bpred.predictIfTaken();
	                                  ^
  required: long
  found: no arguments
  reason: actual and formal argument lists differ in length
Simulator.java:98: error: cannot find symbol
		isPredCorrect = true;
		^
  symbol:   variable isPredCorrect
  location: class Simulator
Simulator.java:100: error: cannot find symbol
		isPredCorrect = false;
		^
  symbol:   variable isPredCorrect
  location: class Simulator
Simulator.java:107: error: cannot find symbol
		System.out.format("\t%s", (isPredCorrect ? "  correct" : "incorrect"));
		                           ^
  symbol:   variable isPredCorrect
  location: class Simulator
4 errors

Compiler error. At least one needed class was not created.
